<resources>
    <string name="app_name">PackrMATE</string>
    <string name="title_activity_pickup">Pickup Address</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_address_search">AddressSearchActivity</string>
    <string name="navigationItem1">Item1</string>
    <string name="navigationItem2">item2</string>
    <string name="navigationItem3">item3</string>
    <string name="navigationItem4">item4</string>
    <string name="navigationItem5">item5</string>
    <string name="navigationItem6">item6</string>
    <string name="navigationItem7">item7</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="app_tagline">your delivery assistant</string>
    <string name="app_logo">app logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_pickup_address_search">PickupAddressSearchActivity</string>
    <string name="set_pickup_location">Set Pickup Location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="obtaining_location">Obtaining location</string>
    <string name="place_details">place details</string>
    <string name="title_activity_item_details">ItemDetailsActivity</string>
    <string name="product_image">product image</string>
    <string name="item_description">Item description</string>
    <string name="home">Home</string>
    <string name="my_orders">My orders</string>
    <string name="my_shipments">My shipments</string>
    <string name="call_us">Call us</string>
    <string name="rate_us">Rate us</string>
    <string name="about_packr">About packr</string>
    <string name="logout">Logout</string>
    <string name="profile_pic">profile picture</string>
    <string name="action_search">Search</string>
    <string name="title_activity_delivery_address_main">DeliveryAddressMainActivity</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="streetName">Street name</string>
    <string name="recipientName">Recipient name</string>
    <string name="Rs">\u20B9</string>
    <string name="equals">=</string>
    <string name="itemQuantity">Quantity</string>
    <string name="item_value">Value of item in rupees</string>
    <string name="done">Done</string>
    <string name="no_shipments_found">You need to add atleast one shipment for a pickup request</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_order_summary">OrderSummary</string>
    <string name="title_activity_my_shipments">MyShipmentsActivity</string>
    <string name="packr_boy_profile_pic">packr boy profile picture</string>
    <string name="cancel_pickup">CANCEL PICKUP</string>
    <string name="call_driver">call driver</string>
    <string name="contactNumber">Contact number</string>
    <string name="document">Document</string>
    <string name="parcel">Parcel</string>
    <string name="selectImage">Snap an image or choose from gallery</string>
    <string name="no_internet_connectivity">It seems you have lost internet connectivity</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="lastName">Last name</string>
    <string name="firstName">First name</string>
    <string name="title_activity_register">Register Activity</string>
    <string name="title_activity_my_orders">MyOrdersActivity</string>
    <string name="app_id">689602937850429</string>
    <string name="share">Share</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_task">Task Activity</string>
    <string name="pickup_request_accepted">Pickup request has been assigned to you. You can now find it in your pending tasks.</string>
    <string name="pickup_request_not_allowed">You are not allowed to accept this request.</string>
    <string name="action_profile">My profile</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="confirm_logout">Are you sure?</string>
    <string name="item_image">Item Image</string>
    <string name="newPassword">New password</string>
</resources>
